--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "primeicons": "^7.0.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
